<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="331dp"
        android:layout_height="586dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="View"
            app:cornerRadius="50px" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="Search"
            app:cornerRadius="50px" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="Report"
            app:cornerRadius="50px" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="Next"
            app:cornerRadius="50px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="Add"
            app:cornerRadius="50px" />

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp"
            android:paddingBottom="10dp"
            android:text="Remove"
            app:cornerRadius="50px" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
